Assertion failure in createWebViewWithRequest when running imported/w3c/web-platform-tests/shadow-dom/crashtests/move-to-new-tree-1343016.html https://bugs.webkit.org/show_bug.cgi?id=255665

Reviewed by Chris Dumez.

The assertion failure is caused by the test using "test-wait" attribute on the document element
to make the test keep running instead of calling waitUntilDone(). Fixed the bug by relaxing
the assertion to allow this method of waiting.

* Tools/DumpRenderTree/mac/UIDelegate.mm:
(-[UIDelegate webView:createWebViewWithRequest:]):

Canonical link: https://commits.webkit.org/263156@main